--- a/position_paper.tex
+++ b/position_paper.tex
@@ -208,7 +208,7 @@ the benevolence of one or two pool operators to secure the currency.
 A conspiracy of miners holding more than 50\% of the hashing power
 is known as 51\% attack\cite{51pct}. It allows the attackers
 to prevent transactions from being made, to undo transactions,
-to steal recently minted coins and to to double spend\cite{centralized}.
+to steal recently minted coins and to double spend\cite{centralized}.
 
 A centralized mint signing blocks would be just as secure,
 and far less wasteful, as a miner controlling 51\% of the hashing power.
